--- a/package.json
+++ b/package.json
@@ -70,15 +70,15 @@
     }
   },
   "dependencies": {
-    "@azure/app-configuration": "1.1.1",
-    "@azure/identity": "1.3.0",
-    "@azure/keyvault-secrets": "4.2.0",
+    "@azure/app-configuration": "^1.4.1",
+    "@azure/identity": "^3.1.4",
+    "@azure/keyvault-secrets": "^4.7.0",
     "bottleneck": "^2.19.5",
     "dotenv": "^10.0.0",
     "sync-rpc": "^1.3.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
+    "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^12.1.4",
     "@danielfsousa/prettier-config": "^1.1.0",
     "@types/dotenv": "^8.2.0",
@@ -97,12 +97,12 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^6.0.0",
-    "jest": "^24.9.0",
+    "jest": "^29.5.0",
     "jest-config": "^27.0.6",
-    "lint-staged": "^11.0.0",
+    "lint-staged": "^13.2.1",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.0",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.0.0",
     "typedoc": "^0.21.2",
     "typescript": "^4.0.5"
